<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    android:transitionName="container_transform"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@drawable/ic_pokeball"
        android:alpha="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClose"
        style="?attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintStart_toEndOf="@id/btnClose"
        app:layout_constraintTop_toTopOf="@id/btnClose"
        app:layout_constraintBottom_toBottomOf="@+id/btnClose"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="@dimen/dimen_24dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="#001" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:padding="@dimen/dimen_4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="65dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnPrev"
                style="?attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:src="@drawable/ic_prev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivAvatar"
                app:layout_constraintBottom_toBottomOf="@+id/ivAvatar" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnNext"
                style="?attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_4dp"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivAvatar"
                app:layout_constraintBottom_toBottomOf="@+id/ivAvatar" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/detail_guideline_top_begin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/detail_guideline_avatar_begin" />

            <View
                android:id="@+id/viewTopRounded"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dimen_4dp"
                android:background="@drawable/shape_top_rounded_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guidelineTop" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/image_size_avatar_detail"
                android:layout_height="@dimen/image_size_avatar_detail"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:transitionName="@string/transition_name_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/guidelineAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/llElements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/ivAvatar"
                app:layout_constraintStart_toStartOf="@id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:textAppearance="@style/App.TextAppearance.SectionTitle"
                android:text="@string/label_about"
                android:textStyle="bold"
                android:textColor="@color/color_type_water"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llElements" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icWeight"
                android:layout_width="@dimen/dimen_16dp"
                android:layout_height="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:src="@drawable/ic_weight"
                app:layout_constraintTop_toTopOf="@+id/tvWeight"
                app:layout_constraintBottom_toBottomOf="@+id/tvWeight"
                app:layout_constraintEnd_toStartOf="@+id/tvWeight"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvAbout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvHeight"
                tools:text="6,9 kg" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:background="@color/deep_gray"
                app:layout_constraintTop_toTopOf="@+id/tvWeight"
                app:layout_constraintStart_toEndOf="@+id/tvWeight"
                app:layout_constraintEnd_toStartOf="@+id/icHeight"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icHeight"
                android:layout_width="@dimen/dimen_16dp"
                android:layout_height="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:src="@drawable/ic_height"
                app:layout_constraintTop_toTopOf="@+id/tvHeight"
                app:layout_constraintBottom_toBottomOf="@+id/tvHeight"
                app:layout_constraintEnd_toStartOf="@+id/tvHeight"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/tvWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0,7 m" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:background="@color/deep_gray"
                app:layout_constraintTop_toTopOf="@+id/tvHeight"
                app:layout_constraintStart_toEndOf="@+id/tvHeight"
                app:layout_constraintEnd_toStartOf="@+id/tvMove"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvAbout"
                app:layout_constraintBottom_toTopOf="@+id/labelMove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvHeight"
                tools:text="Chlorophyll" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/label_weight"
                android:textColor="@color/color_type_dark"
                app:layout_constraintTop_toBottomOf="@id/tvWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvHeight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_height"
                android:textColor="@color/color_type_dark"
                app:layout_constraintTop_toTopOf="@id/labelWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_moves"
                android:textColor="@color/color_type_dark"
                app:layout_constraintTop_toTopOf="@id/labelHeight"
                app:layout_constraintStart_toEndOf="@id/labelHeight"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.3"
                android:textAppearance="@style/App.TextAppearance.Overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelHeight"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStat"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:enabled="false"
                android:fontFamily="sans-serif"
                android:minWidth="125dp"
                android:stateListAnimator="@animator/button_detail_state_list_anim"
                android:text="@string/btn_stats"
                android:textColor="@drawable/button_detail_text_color"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:backgroundTint="@drawable/button_detail_tint_color"
                app:cornerRadius="28dp"
                app:layout_constraintEnd_toStartOf="@+id/btnEvolutions"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEvolutions"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:enabled="true"
                android:fontFamily="sans-serif"
                android:stateListAnimator="@animator/button_detail_state_list_anim"
                android:text="@string/btn_evolutions"
                android:textColor="@drawable/button_detail_text_color"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:backgroundTint="@drawable/button_detail_tint_color"
                app:cornerRadius="28dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnStat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnStat"
                app:layout_constraintTop_toTopOf="@+id/btnStat" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="@dimen/dimen_8dp"
                app:constraint_referenced_ids="btnStat,btnEvolutions" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrierButtons"
                tools:itemCount="1"
                tools:listitem="@layout/list_item_stat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCatchPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:backgroundTint="@color/color_type_fighting"
        android:src="@drawable/ic_pokeball"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
